hotfix: fixing .html to remove

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <img src="assets/img/science/1-science-center.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="fasilitas-tambahan/science-center.html" class="stretched-link">Science Center</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/science-center" class="stretched-link">Science Center</a></h4>
                 <p class="description">Ruang edukatif interaktif yang memperkenalkan ilmu pengetahuan secara
                   menyenangkan, cocok untuk anak anak dan pelajar</p>
               </div>
@@ -308,7 +308,7 @@
                 <img src="assets/img/taman-k/1-taman.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="fasilitas-tambahan/taman-kaulinan-barudak.html" class="stretched-link">Taman Kaulinan Barudak</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/taman-kaulinan-barudak" class="stretched-link">Taman Kaulinan Barudak</a></h4>
                 <p class="description">Area bermain outdoor bernuansa tradisional Sunda yang aman dan edukatif untuk
                   anak-anak.</p>
               </div>
@@ -323,7 +323,7 @@
                 <img src="assets/img/art/4-art.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="fasilitas-tambahan/3d-art-gallery.html" class="stretched-link">3D Art Gallery</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/3d-art-gallery" class="stretched-link">3D Art Gallery</a></h4>
                 <p class="description">Galeri seni visual dengan instalasi 3D yang unik dan instagramable, cocok untuk
                   berswafoto dan eksplorasi kreatif.</p>
               </div>
@@ -338,7 +338,7 @@
                 <img src="assets/img/foodcourt/1-foodcourt.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="fasilitas-tambahan/foodcourt.html" class="stretched-link">Foodcourt</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/foodcourt" class="stretched-link">Foodcourt</a></h4>
                 <p class="description">Aneka pilihan kuliner dalam satu area nyaman yang cocok untuk bersantai</p>
               </div>
             </div>
@@ -352,7 +352,7 @@
                 <img src="assets/img/taman-l/2-taman-l.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="fasilitas-tambahan/taman-lembayung-senja.html" class="stretched-link">Taman Lembayung Senja</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/taman-lembayung-senja" class="stretched-link">Taman Lembayung Senja</a></h4>
                 <p class="description">Taman dengan suasana tenang dan pemandangan sore yang indah, cocok untuk
                   relaksasi dan foto-foto.</p>
               </div>
@@ -368,7 +368,7 @@
                 <img src="assets/img/dome/4-dome.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="fasilitas-tambahan/dome-balerame.html" class="stretched-link">Dome Balerame</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/dome-balerame" class="stretched-link">Dome Balerame</a></h4>
                 <p class="description">area
                   semi-outdoor
                   berkapasitas besar yang berada dalam kompleks
