feat: pricing klik buying

--- a/index.html
+++ b/index.html
@@ -192,11 +192,12 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/panggung/4-panggung.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
+              <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas/panggung-utama" class="stretched-link">Panggung Utama</a></h4>
                 <p class="description">fasilitas inti yang dirancang untuk
                   menampilkan pertunjukan seni</p>
@@ -208,11 +209,12 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/pertemuan/2-pertemuan.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
+              <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas/ruang-vip" class="stretched-link">Ruang VIP</a></h4>
                 <p class="description">menghadirkan kenyamanan dan fasilitas lengkap
                   untuk berbagai aktivitas formal dan komunitas.</p>
@@ -223,11 +225,12 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/vip/3-vip.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
+              <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas/ruang-pertemuan" class="stretched-link">Ruang Pertemuan</a></h4>
                 <p class="description">memberikan pengalaman terbaik bagi
                   tamu kehormatan, pembicara, atau tokoh penting
@@ -239,11 +242,12 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/selasar/7-selasar.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
+              <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas/selasar" class="stretched-link">Selasar</a></h4>
                 <p class="description">area semi-outdoor yang luas dan fleksibel</p>
               </div>
@@ -253,11 +257,12 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/rias/1-rias.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
+              <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas/ruang-rias" class="stretched-link">Ruang Rias</a></h4>
                 <p class="description">disediakan khusus untuk menunjang kenyamanan
                   performer dan talent sebelum tampil</p>
@@ -287,12 +292,14 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/science/1-science-center.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
-                <h4 class="title"><a href="fasilitas-tambahan/science-center" class="stretched-link">Science Center</a></h4>
+              <div class="mt-4 mt-lg-0">
+                <h4 class="title"><a href="fasilitas-tambahan/science-center" class="stretched-link">Science Center</a>
+                </h4>
                 <p class="description">Ruang edukatif interaktif yang memperkenalkan ilmu pengetahuan secara
                   menyenangkan, cocok untuk anak anak dan pelajar</p>
               </div>
@@ -303,12 +310,14 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/taman-k/1-taman.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
-                <h4 class="title"><a href="fasilitas-tambahan/taman-kaulinan-barudak" class="stretched-link">Taman Kaulinan Barudak</a></h4>
+              <div class="mt-4 mt-lg-0">
+                <h4 class="title"><a href="fasilitas-tambahan/taman-kaulinan-barudak" class="stretched-link">Taman
+                    Kaulinan Barudak</a></h4>
                 <p class="description">Area bermain outdoor bernuansa tradisional Sunda yang aman dan edukatif untuk
                   anak-anak.</p>
               </div>
@@ -318,12 +327,14 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/art/4-art.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
-                <h4 class="title"><a href="fasilitas-tambahan/3d-art-gallery" class="stretched-link">3D Art Gallery</a></h4>
+              <div class="mt-4 mt-lg-0">
+                <h4 class="title"><a href="fasilitas-tambahan/3d-art-gallery" class="stretched-link">3D Art Gallery</a>
+                </h4>
                 <p class="description">Galeri seni visual dengan instalasi 3D yang unik dan instagramable, cocok untuk
                   berswafoto dan eksplorasi kreatif.</p>
               </div>
@@ -333,11 +344,12 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/foodcourt/1-foodcourt.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
+              <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas-tambahan/foodcourt" class="stretched-link">Foodcourt</a></h4>
                 <p class="description">Aneka pilihan kuliner dalam satu area nyaman yang cocok untuk bersantai</p>
               </div>
@@ -347,12 +359,14 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/taman-l/2-taman-l.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
-                <h4 class="title"><a href="fasilitas-tambahan/taman-lembayung-senja" class="stretched-link">Taman Lembayung Senja</a></h4>
+              <div class="mt-4 mt-lg-0">
+                <h4 class="title"><a href="fasilitas-tambahan/taman-lembayung-senja" class="stretched-link">Taman
+                    Lembayung Senja</a></h4>
                 <p class="description">Taman dengan suasana tenang dan pemandangan sore yang indah, cocok untuk
                   relaksasi dan foto-foto.</p>
               </div>
@@ -363,12 +377,14 @@
 
           <!-- begin Service Item -->
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
+            <div
+              class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
                 <img src="assets/img/dome/4-dome.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
-              <div>
-                <h4 class="title"><a href="fasilitas-tambahan/dome-balerame" class="stretched-link">Dome Balerame</a></h4>
+              <div class="mt-4 mt-lg-0">
+                <h4 class="title"><a href="fasilitas-tambahan/dome-balerame" class="stretched-link">Dome Balerame</a>
+                </h4>
                 <p class="description">area
                   semi-outdoor
                   berkapasitas besar yang berada dalam kompleks
@@ -541,7 +557,7 @@
                 <li class="na"><i class="bi bi-x"></i> <span>Penambahan Listrik</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Gun Smoke</span></li>
               </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Pesan Sekarang</a></div>
+              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Perunggu" class="buy-btn">Pesan Sekarang</a></div>
             </div>
           </div>
 
@@ -565,7 +581,7 @@
                 <li class="na"><i class="bi bi-x"></i> <span>Penambahan Listrik</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Gun Smoke</span></li>
               </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Pesan Sekarang</a></div>
+              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Silver" class="buy-btn">Pesan Sekarang</a></div>
             </div>
           </div>
 
@@ -590,7 +606,7 @@
                 <li class="na"><i class="bi bi-x"></i> <span>Penambahan Listrik</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Gun Smoke</span></li>
               </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Pesan Sekarang</a></div>
+              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Gold" class="buy-btn">Pesan Sekarang</a></div>
             </div>
           </div>
 
@@ -614,7 +630,7 @@
                 <li><i class="bi bi-check"></i> <span>Gun Smoke</span></li>
                 <li><i class="bi bi-check"></i> <span>Latihan/Gradi Resik</span></li>
               </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Pesan Sekarang</a></div>
+              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Platinum" class="buy-btn">Pesan Sekarang</a></div>
             </div>
           </div>
         </div>
@@ -707,16 +723,14 @@
                         <h3>Ferry Mario</h3>
                         <div class="stars">
                           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
-                            class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
+                            class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                         </div>
                       </div>
                     </div>
                     <p>
                       <i class="bi bi-quote quote-icon-left"></i>
                       <span>Auditorium ini cocok untuk pertunjukan kecil hingga menengah. Pencahayaan dan sistem
-                        audionya bagus. Sayangnya, perawatannya kurang. Beberapa kursi di dalam auditorium rusak.
-                        Kebersihan toilet perlu ditingkatkan. Area tunggu di luar juga butuh kursi tambahan dan lebih
-                        luas. Area parkir perlu dirawat lebih baik.</span>
+                        audionya bagus.</span>
                       <i class="bi bi-quote quote-icon-right"></i>
                     </p>
                   </div>
@@ -852,7 +866,7 @@
           </div>
 
 
-          <div class="col-lg-12">
+          <div class="col-lg-12" id="contact-form">
             <form action="javascript:;" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
