hotifx: change design

--- a/fasilitas/panggung-utama.html
+++ b/fasilitas/panggung-utama.html
@@ -91,11 +91,9 @@
 
     </section><!-- /Hero Section -->
 
-    <section class="section w-100 p-0">
-      <img src="../assets/img/addon/bg-fasillity.png" alt="" class="w-100" data-aos="fade-in">
-
+    <section class="section w-100 px-0 py-2">
       <div class="d-flex justify-content-center align-items-center flex-column text-center">
-        <h1 class="text-dakr poppins fw-bold fs-1" data-aos="fade-up" data-aos-delay="100">Rp. 17.500.000</h1>
+        <h1 class="red-text poppins fw-bold fs-1" data-aos="fade-up" data-aos-delay="100">Rp. 17.500.000</h1>
       </div>
 
     </section>
@@ -124,7 +122,7 @@
             <img src="../assets/img/panggung/4-panggung.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>FASILITAS & SPESIFIKASI</h3>
+            <h3 class="green-text">FASILITAS & SPESIFIKASI</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Kapasitas ±840 orang</span></li>
               <li><i class="bi bi-dot"></i><span>Sound System Profesional</span></li>
@@ -141,7 +139,7 @@
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>COCOK DIGUNAKAN UNTUK</h3>
+            <h3 class="green-text">COCOK DIGUNAKAN UNTUK</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Pertunjukan seni & budaya</span></li>
               <li><i class="bi bi-dot"></i><span>Konser musik</span></li>
@@ -162,25 +160,25 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative">
 
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-12 col-md-12 footer-about">
           <a href="/" class="logo d-flex align-items-center">
-            <span class="sitename">Gedong Budaya Sabililulungan</span>
+            <span class="sitename green-text">Gedong Budaya Sabililulungan</span>
           </a>
           <div class="social-links d-flex mt-4">
-            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="bi bi-tiktok"></i></a>
-            <a href="https://www.instagram.com/gbs_kabbdg"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="green-text bi bi-youtube"></i></a>
+            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="green-text bi bi-tiktok"></i></a>
+            <a href="https://www.instagram.com/gbs_kabbdg"><i class="green-text bi bi-instagram"></i></a>
           </div>
         </div>
 
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    <div class="container copyright yellow-background  text-center mt-4">
       <p>2025 © <span>Copyright</span> <strong class="sitename">GBS</strong> <span></span></p>
     </div>
 
