--- a/fasilitas/ruang-vip.html
+++ b/fasilitas/ruang-vip.html
@@ -91,11 +91,11 @@
 
     </section><!-- /Hero Section -->
 
-    <section class="section w-100 p-0">
-      <img src="../assets/img/addon/bg-fasillity.png" alt="" class="w-100" data-aos="fade-in">
+    <section class="section w-100 px-0 py-2">
+
 
       <div class="d-flex justify-content-center align-items-center flex-column text-center">
-        <h1 class="text-dakr poppins fw-bold fs-1" data-aos="fade-up" data-aos-delay="100">Rp. 1.500.000</h1>
+        <h1 class="red-text poppins fw-bold fs-1" data-aos="fade-up" data-aos-delay="100">Rp. 1.500.000</h1>
       </div>
 
     </section>
@@ -124,7 +124,7 @@
             <img src="../assets/img/vip/4-vip.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>FASILITAS & SPESIFIKASI</h3>
+            <h3 class="green-text">FASILITAS & SPESIFIKASI</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Ruangan full AC dengan suasana eksklusif</span></li>
               <li><i class="bi bi-dot"></i><span>Sofa dan kursi empuk untuk relaksasi</span></li>
@@ -138,7 +138,7 @@
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>COCOK DIGUNAKAN UNTUK</h3>
+            <h3 class="green-text">COCOK DIGUNAKAN UNTUK</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Pembicara atau pengisi acara</span></li>
               <li><i class="bi bi-dot"></i><span>Tamu undangan VVIP</span></li>
@@ -148,7 +148,7 @@
             <a href="javascript:void(0)" class="btn btn-get-started align-self-start" data-tempat="Ruang VIP">Sewa Sekarang</a>
           </div>
           <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-            <img src="../assets/img/vip/6-vip.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/vip/5-vip.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
 
@@ -158,25 +158,25 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative">
 
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-12 col-md-12 footer-about">
           <a href="/" class="logo d-flex align-items-center">
-            <span class="sitename">Gedong Budaya Sabililulungan</span>
+            <span class="sitename green-text">Gedong Budaya Sabililulungan</span>
           </a>
           <div class="social-links d-flex mt-4">
-            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="bi bi-tiktok"></i></a>
-            <a href="https://www.instagram.com/gbs_kabbdg"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="green-text bi bi-youtube"></i></a>
+            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="green-text bi bi-tiktok"></i></a>
+            <a href="https://www.instagram.com/gbs_kabbdg"><i class="green-text bi bi-instagram"></i></a>
           </div>
         </div>
 
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    <div class="container copyright yellow-background  text-center mt-4">
       <p>2025 © <span>Copyright</span> <strong class="sitename">GBS</strong> <span></span></p>
     </div>
 
