--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="col-lg-10">
             <h2 data-aos="fade-up" data-aos-delay="100">Selamat Datang di<br> Gedong
               Budaya Sabilulungan</h2>
-            <p data-aos="fade-up" data-aos-delay="200" class="my-4 text-white nunito fs-3">Panggung karya, Ruang
+            <p data-aos="fade-up" data-aos-delay="200" class="my-4 yellow-text nunito fs-3">Panggung karya, Ruang
               Inspirasi
             </p>
           </div>
@@ -98,7 +98,7 @@
 
           <div class="col-xl-5 content py-3 rounded">
             <h3>Tentang</h3>
-            <h2 class="my-3 red-text">Gedong Budaya Sabilulungan</h2>
+            <h2 class="mb-3">Gedong Budaya Sabilulungan</h2>
             <p class="nunito fw-bold">Gedong Budaya Sabilulungan (GBS) merupakan fasilitas publik yang dibangun sebagai
               pusat kegiatan seni dan
               budaya yang mengusung arsitektur tradisional Sunda berpadu sentuhan modern. Tidak hanya menjadi ruang eks
@@ -135,14 +135,14 @@
 
         <div class="row align-items-xl-center justify-content-center gy-5">
           <div class="col-xl-12 text-center mb-xl-5" data-aos="fade-up" data-aos-delay="500">
-            <h2 class="text-center fw-bold fs-1">Mengapa Gedong Budaya Sabilulungan</h2>
+            <h2 class="text-center fw-bold fs-1 yellow-text">Mengapa Gedong Budaya Sabilulungan</h2>
           </div>
           <div class="col-xl-10">
             <div class="row gy-4 icon-boxes justify-content-center">
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box">
                   <i class="bi bi-building-fill"></i>
-                  <h3>Fasilitas Lengkap</h3>
+                  <h3 class="yellow-text">Fasilitas Lengkap</h3>
                   <p>Ruang pertunjukan berkapasitas ±800 kursi, didukung pencahayaan dan akustik profesional. Lengkap
                     dengan ruang ganti, ruang tunggu, dan area parkir luas.</p>
                 </div>
@@ -151,7 +151,7 @@
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
                   <i class="bi bi-geo-alt"></i>
-                  <h3>Lokasi Strategis</h3>
+                  <h3 class="yellow-text">Lokasi Strategis</h3>
                   <p>Terletak di pusat Soreang, berdampingan dengan Kantor Bupati dan Masjid Al-Fathu. Mudah diakses
                     dari Kota Bandung maupun luar kota melalui Tol Soroja dan transportasi umum.</p>
                 </div>
@@ -160,7 +160,7 @@
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box">
                   <i class="bi bi-brush"></i>
-                  <h3>Serbaguna untuk
+                  <h3 class="yellow-text">Serbaguna untuk
                     Acara Seni & Formal</h3>
                   <p>Cocok untuk pertunjukan
                     budaya, konser, seminar, hingga
@@ -283,7 +283,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Fasilitas Tambahan</h2>
+        <h2 class="red-text">Fasilitas Tambahan</h2>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -408,7 +408,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2 class="red-text">Galeri</h2>
+        <h2 class="green-text">Galeri GBS</h2>
         <p>Dokumentasi: Merangkai Momen, Merawat Budaya</p>
       </div><!-- End Section Title -->
 
@@ -530,7 +530,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Paket Sewa</h2>
+        <h2 class="red-text">Paket Sewa</h2>
         <p>Temukan pilihan sewa yang pas untuk acaramu!</p>
       </div><!-- End Section Title -->
 
@@ -646,7 +646,7 @@
 
           <div class="col-lg-5 info py-5 px-3" data-aos="fade-up" data-aos-delay="100"
             style="background-color: #ffffffec;">
-            <h3 class="red-text">Apa Kata Mereka</h3>
+            <h3 class="green-text">Apa Kata Mereka</h3>
             <p>
               Cerita dari mereka yang pernah bikin acara seru di GBS
               Yuk simak pengalaman mereka!
@@ -779,7 +779,7 @@
                   data-aos-delay="300">
                   <i class="bi bi-instagram"></i>
                   <h3>Instagram</h3>
-                  <p>@Gedongbudayasabilulungan</p>
+                  <p>@gedongsabilulungan</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -891,7 +891,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Pesan mu telah terkirim terima kasih</div>
 
-                  <button type="submit" class="rounded-4">Tanya dan Sewa Sekarang</button>
+                  <button type="submit" class="rounded-4 fw-bold fs-6">Tanya dan Sewa Sekarang</button>
                 </div>
 
               </div>
@@ -906,25 +906,25 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative">
 
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-12 col-md-12 footer-about">
           <a href="/" class="logo d-flex align-items-center">
-            <span class="sitename">Gedong Budaya Sabililulungan</span>
+            <span class="sitename green-text">Gedong Budaya Sabililulungan</span>
           </a>
           <div class="social-links d-flex mt-4">
-            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="bi bi-tiktok"></i></a>
-            <a href="https://www.instagram.com/gbs_kabbdg"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="green-text bi bi-youtube"></i></a>
+            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="green-text bi bi-tiktok"></i></a>
+            <a href="https://www.instagram.com/gedongsabilulungan"><i class="green-text bi bi-instagram"></i></a>
           </div>
         </div>
 
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    <div class="container copyright yellow-background  text-center mt-4">
       <p>2025 © <span>Copyright</span> <strong class="sitename">GBS</strong> <span></span></p>
     </div>
 
