--- a/fasilitas-tambahan/foodcourt.html
+++ b/fasilitas-tambahan/foodcourt.html
@@ -91,14 +91,15 @@
 
     </section><!-- /Hero Section -->
 
-    <section class="section w-100 p-0">
-      <img src="../assets/img/addon/bg-fasillity.png" alt="" class="w-100" data-aos="fade-in">
+    <section class="section w-100 px-0 py-2">
+
     </section>
 
     <!-- Features Section -->
     <section id="features" class="features section">
       <div class="container-fluid">
-        <div class="row gy-4 align-items-center features-item">
+        <div class="row gy-4 align-items-center justify-content-around features-item">
+          <div class="col-lg-5 d-flex align-items-center features-img-bg" data-aos="zoom-out">
             <img src="../assets/img/foodcourt/1-foodcourt.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
@@ -123,25 +124,25 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative">
 
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-12 col-md-12 footer-about">
           <a href="/" class="logo d-flex align-items-center">
-            <span class="sitename">Gedong Budaya Sabililulungan</span>
+            <span class="sitename green-text">Gedong Budaya Sabililulungan</span>
           </a>
           <div class="social-links d-flex mt-4">
-            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="bi bi-tiktok"></i></a>
-            <a href="https://www.instagram.com/gbs_kabbdg"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="green-text bi bi-youtube"></i></a>
+            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="green-text bi bi-tiktok"></i></a>
+            <a href="https://www.instagram.com/gbs_kabbdg"><i class="green-text bi bi-instagram"></i></a>
           </div>
         </div>
 
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    <div class="container copyright yellow-background  text-center mt-4">
       <p>2025 © <span>Copyright</span> <strong class="sitename">GBS</strong> <span></span></p>
     </div>
 
