--- a/fasilitas-tambahan/science-center.html
+++ b/fasilitas-tambahan/science-center.html
@@ -91,8 +91,8 @@
 
     </section><!-- /Hero Section -->
 
-    <section class="section w-100 p-0">
-      <img src="../assets/img/addon/bg-fasillity.png" alt="" class="w-100" data-aos="fade-in">
+    <section class="section w-100 px-0 py-2">
+
     </section>
 
     <!-- Features Section -->
@@ -119,7 +119,7 @@
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-            <img src="../assets/img/science/9-science-center.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/science/7-science-center.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3>Apa Saja yang Bisa Kamu Nikmati?</h3>
@@ -137,7 +137,7 @@
               </li>
 
               <li>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" class="text-danger">
                   <path fill="currentColor"
                     d="M4 15h2a2 2 0 0 1 2 2v2h1v-2a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2h1v-2a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2h1v3H1v-3h1v-2a2 2 0 0 1 2-2m7-8l4 3l-4 3zM4 2h16a2 2 0 0 1 2 2v9.54a3.9 3.9 0 0 0-2-.54V4H4v9c-.73 0-1.41.19-2 .54V4a2 2 0 0 1 2-2" />
                 </svg>
@@ -213,25 +213,25 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative">
 
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-12 col-md-12 footer-about">
           <a href="/" class="logo d-flex align-items-center">
-            <span class="sitename">Gedong Budaya Sabililulungan</span>
+            <span class="sitename green-text">Gedong Budaya Sabililulungan</span>
           </a>
           <div class="social-links d-flex mt-4">
-            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="bi bi-tiktok"></i></a>
-            <a href="https://www.instagram.com/gbs_kabbdg"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="green-text bi bi-youtube"></i></a>
+            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="green-text bi bi-tiktok"></i></a>
+            <a href="https://www.instagram.com/gbs_kabbdg"><i class="green-text bi bi-instagram"></i></a>
           </div>
         </div>
 
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    <div class="container copyright yellow-background  text-center mt-4">
       <p>2025 © <span>Copyright</span> <strong class="sitename">GBS</strong> <span></span></p>
     </div>
 
