--- a/fasilitas/selasar.html
+++ b/fasilitas/selasar.html
@@ -91,8 +91,8 @@
 
     </section><!-- /Hero Section -->
 
-    <section class="section w-100 p-0">
-      <img src="../assets/img/addon/bg-fasillity.png" alt="" class="w-100" data-aos="fade-in">
+    <section class="section w-100 px-0 py-2">
+
     </section>
 
     <!-- Features Section -->
@@ -119,7 +119,7 @@
             <img src="../assets/img/selasar/4-selasar.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>FASILITAS & SPESIFIKASI</h3>
+            <h3 class="green-text">FASILITAS & SPESIFIKASI</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Area transisi antara ruang utama & outdoor</span></li>
               <li><i class="bi bi-dot"></i><span>Tempat tunggu yang estetik</span></li>
@@ -132,7 +132,7 @@
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>COCOK DIGUNAKAN UNTUK</h3>
+            <h3 class="green-text">COCOK DIGUNAKAN UNTUK</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Booth komunitas atau UMKM</span></li>
               <li><i class="bi bi-dot"></i><span>Aktivitas interaktif atau instalasi seni</span></li>
@@ -152,25 +152,25 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative">
 
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-12 col-md-12 footer-about">
           <a href="/" class="logo d-flex align-items-center">
-            <span class="sitename">Gedong Budaya Sabililulungan</span>
+            <span class="sitename green-text">Gedong Budaya Sabililulungan</span>
           </a>
           <div class="social-links d-flex mt-4">
-            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="bi bi-tiktok"></i></a>
-            <a href="https://www.instagram.com/gbs_kabbdg"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="green-text bi bi-youtube"></i></a>
+            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="green-text bi bi-tiktok"></i></a>
+            <a href="https://www.instagram.com/gbs_kabbdg"><i class="green-text bi bi-instagram"></i></a>
           </div>
         </div>
 
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    <div class="container copyright yellow-background  text-center mt-4">
       <p>2025 © <span>Copyright</span> <strong class="sitename">GBS</strong> <span></span></p>
     </div>
 
